
  From Steve Christensen:

  - Add an optional sort function argument to the GenerateHelpText()
    Options function.

  - Evaluate the "varlist" variables when computing the signature of a
    function action.

  From Charles Crain:

  - Parse the source .java files for class names (including inner class
    names) to figure out the target .class files that will be created.

  From Steven Knight:

  - Add support for Java (javac and jar).

  - Propagate the external SYSTEMROOT environment variable into ENV on
    Win32 systems, so external commands that use sockets will work.

  - Add a .posix attribute to PathList expansions.

  - Check out CVS source files using POSIX path names (forward slashes
    as separators) even on Win32.

  - Add Node.clear() and Node.FS.Entry.clear() methods to wipe out a
    Node's state, allowing it to be re-evaluated by continuous
    integration build interfaces.

  - Change the name of the Set{Build,Content}SignatureType() functions
    to {Target,Source}Signatures().  Deprecate the old names but support
    them for backwards compatibility.

  From Damyan Pepper:

  - Quote the "Entering directory" message like Make.

  From Stefan Reichor:

  - Add support for using Ghostscript to convert Postscript to PDF files.

  From Anthony Roach:

  - Add a standalone "Alias" function (separate from an Environment).

  - Make Export() work for local variables.

  - Support passing a dictionary to Export().

  - Support Import('*') to import everything that's been Export()ed.

  From David Snopek:

  - Contribute the "Autoscons" code for Autoconf-like checking for
    the existence of libraries, header files and the like.

  From Greg Spencer:

  - Support the C preprocessor #import statement.

  - Allow the SharedLibrary() Builder on Win32 systems to be able to
    register a newly-built dll using regsvr32.

  - Add a Builder for Windows type library (.tlb) files from IDL files.

  - Add an IDL scanner.
