@@ -46,6 +46,10 @@ RELEASE 0.14 - XXX
   - Parse the source .java files for class names (including inner class
     names) to figure out the target .class files that will be created.
 
+  - Fix Java support with Repositories and SConscriptChdir(0).
+
+  - Pass Nodes, not strings, to Builder emitter functions.
+
   From Steven Knight:
 
   - Add support for Java (javac and jar).
